virtual machines/ubuntu-minikube/Kubernetes/prometheus-pve-exporter/prometheus-pve-exporter-dp.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: prometheus-pve-exporter
    name: prometheus-pve-exporter-dp
    namespace: prometheus-pve-exporter
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: prometheus-pve-exporter
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: prometheus-pve-exporter
      spec:
        containers:
        - envFrom:
          - secretRef:
              name: prometheus-pve-exporter-sec
          image: prompve/prometheus-pve-exporter
          imagePullPolicy: Always
          name: prometheus-pve-exporter
          ports:
          - containerPort: 9221
            protocol: TCP
          resources:
            limits:
              cpu: 128m
              memory: 100Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
              - SYS_NICE
              drop:
              - KILL
            readOnlyRootFilesystem: false
            runAsUser: 65534
            seLinuxOptions:
              level: s0:c123,c456
            seccompProfile:
              type: RuntimeDefault
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
