virtual machines/ubuntu-minikube/Kubernetes/prometheus-pve-exporter/prometheus-pve-exporter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus-pve-exporter
  name: prometheus-pve-exporter-svc
  namespace: prometheus-pve-exporter
spec:
  ports:
    - name: http
      port: 9221
      targetPort: 9221
  selector:
    app: prometheus-pve-exporter
