virtual machines/ubuntu-minikube/Kubernetes/prometheus-pve-exporter/prometheus-pve-exporter-netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-pve-exporter-netpolicy
  namespace:  prometheus-pve-exporter
spec:
  podSelector:
    matchLabels:
      app:  prometheus-pve-exporter
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 172.17.0.0/16
            except:
              - 172.17.0.0/24
  egress:           
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
